hw04-istio/manage-traffic/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: firstapp
spec:
  host: hw04-istio-ms-arch-2021-03
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hw04-istio-ms-arch-2021-03-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: firstapp
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - hw04-istio-ms-arch-2021-03-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hw04-istio-ms-arch-2021-03
            subset: v2
          weight: 50
        - destination:
            host: hw04-istio-ms-arch-2021-03
            subset: v1
          weight: 50
