hw04-istio/manage-traffic/proxy-app-sidecar-disable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: hw04-istio2-ms-arch-2021-03
  namespace: default
spec:
  egress:
    - hosts:
        - "~/*" # Это стандартная настройка, которая обозначает, сервису недоступно ничего
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  workloadSelector:
    labels:
      app: hw04-istio2-ms-arch-2021-03
